--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blogspace</title>
+  <title>Tumblr</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag    'application', 'http://fonts.googleapis.com/css?gamily=raleway:400,700' %>
+  <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= favicon_link_tag 'favicon.ico' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="sidebar">
-    <ul>
-      <li class="category"><%= link_to "Blogs", root_path %></li>
-      <li><%= link_to "Posts", root_path %></li>
-      <li>about</li>
-    </ul>
+	<div id="sidebar">
+		<ul>
+			<li class="category"><%= link_to "Blogs", root_path %></li>
+			<li><%= link_to "Posts", root_path %></li>
+		</ul>
 
-    <p class="sign_in">Login</p>
-  </div>
+			<p class="sign_in"><%= link_to "User Login" %></p>
 
-  <div id="main_content">
-    <div id="header">
-      <p>Post Feed</p>
-      <div class="buttons">
-        <button class="button"><%= link_to "New Post", new_post_path %></button>
-        <button class="button">Log Out</button>
-      </div>
-    </div>
+	</div>
 
-    <% flash.each do |name, msg| %>
-    <%= content_tag(:div, msg, class: "alert") %>
-    <% end %>
+	<div id="main_content">
+		<div id="header">
+				<p>Post Feed</p>
+				<p>My Site</p>
+				<%= link_to "Back to Post Feed", root_path %>
+				<div class="buttons">
+					<button class="button"><%= link_to "Make Post", new_post_path %></button>
+					<button class="button"><%= link_to "Sign Out" %></button>
+				</div>
 
-    <%= yield %>
 
-  </div>
+		</div>
 
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>
+
+		<%= yield %>
+
+	</div>
 
 
 
