--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tumblr</title>
+  <title>Blogspace</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -13,6 +13,7 @@
 		<ul>
 			<li class="category"><%= link_to "Blogs", root_path %></li>
 			<li><%= link_to "Posts", root_path %></li>
+      <li><%= link_to "About", about_path %></li>
 		</ul>
 
 			<p class="sign_in"><%= link_to "User Login" %></p>
@@ -21,15 +22,18 @@
 
 	<div id="main_content">
 		<div id="header">
+      <% if current_page?(root_path) %>
 				<p>Post Feed</p>
+      <% elsif current_page?(about_path) %>
 				<p>My Site</p>
+      <% else %>
 				<%= link_to "Back to Post Feed", root_path %>
+      <% end %>
+
 				<div class="buttons">
 					<button class="button"><%= link_to "Make Post", new_post_path %></button>
 					<button class="button"><%= link_to "Sign Out" %></button>
 				</div>
-
-
 		</div>
 
 		<% flash.each do |name, msg| %>
