--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,27 +13,31 @@
 		<ul>
 			<li class="category"><%= link_to "Blogs", root_path %></li>
 			<li><%= link_to "Posts", root_path %></li>
-      <li><%= link_to "About", about_path %></li>
+			<li><%= link_to "About", about_path %></li>
 		</ul>
-
-			<p class="sign_in"><%= link_to "User Login" %></p>
+		<% if !user_signed_in? %>
+			<p class="sign_in"><%= link_to "User Login", new_user_session_path %></p>
+		<% end %>
 
 	</div>
 
 	<div id="main_content">
 		<div id="header">
-      <% if current_page?(root_path) %>
+			<% if current_page?(root_path) %>
 				<p>Post Feed</p>
-      <% elsif current_page?(about_path) %>
+			<% elsif current_page?(about_path) %>
 				<p>My Site</p>
-      <% else %>
+			<% else %>
 				<%= link_to "Back to Post Feed", root_path %>
-      <% end %>
-
+			<% end %>
+			<% if user_signed_in? %>
 				<div class="buttons">
 					<button class="button"><%= link_to "Make Post", new_post_path %></button>
-					<button class="button"><%= link_to "Sign Out" %></button>
+					<button class="button"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></button>
 				</div>
+			<% end %>
+
+
 		</div>
 
 		<% flash.each do |name, msg| %>
