--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blogspace</title>
+  <title>Blogr</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -11,13 +11,18 @@
 <body>
 	<div id="sidebar">
 		<ul>
-			<li class="category"><%= link_to "Blogs", root_path %></li>
+			<li class="category"><%= link_to "Blog", root_path %></li>
 			<li><%= link_to "Posts", root_path %></li>
 			<li><%= link_to "About", about_path %></li>
+      <% if user_signed_in? %>
+      <li><%= link_to "Make Post", new_post_path %></li>
+      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <% end %>
 		</ul>
 		<% if !user_signed_in? %>
-			<p class="sign_in"><%= link_to "User Login", new_user_session_path %></p>
+		  <p class="sign_in"><%= link_to "User Login", new_user_session_path %></p>
 		<% end %>
+
 
 	</div>
 
@@ -30,12 +35,8 @@
 			<% else %>
 				<%= link_to "Back to Post Feed", root_path %>
 			<% end %>
-			<% if user_signed_in? %>
-				<div class="buttons">
-					<button class="button"><%= link_to "Make Post", new_post_path %></button>
-					<button class="button"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></button>
-				</div>
-			<% end %>
+
+
 
 
 		</div>
